Rename app to wickphorus and fix dark mode

--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   background-color: #fafafa;
 }
-.dark {
+html.dark, html.dark body {
   background-color: #111;
   color: #ddd;
   color-scheme: dark;
